Fix Railway build for server root directory
- Update build command to cd .. to project root first
- Add nixpacks.toml in server/ directory since that's the root
- Build frontend from project root, then setup backend in server/
- Start command runs from server directory

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -6,11 +6,11 @@ cmds = ["npm ci"]
 
 [phases.build]
 cmds = [
+  "cd .. && npm install",
+  "cd .. && npm run build",
   "npm install",
-  "npm run build",
-  "cd server && npm install",
-  "cd server && npx prisma generate"
+  "npx prisma generate"
 ]
 
 [start]
-cmd = "cd server && npm start"
+cmd = "npm start"
