Fix npm install conflict in Railway build
- Use npm ci instead of npm install to avoid tracker conflicts
- Skip install phase in nixpacks.toml, do everything in build phase
- Use npm ci consistently to ensure clean installs

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,13 +2,12 @@
 nixPkgs = ["nodejs_18", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = []
 
 [phases.build]
 cmds = [
-  "cd .. && npm install",
-  "cd .. && npm run build",
-  "npm install",
+  "cd .. && npm ci && npm run build",
+  "npm ci",
   "npx prisma generate"
 ]
 
