Update build commands in nixpacks.toml and railway.json to use npm install
- Replace npm ci with npm install in both configuration files for consistency
- Ensure build commands correctly install dependencies before building the project

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -6,7 +6,7 @@ cmds = []
 
 [phases.build]
 cmds = [
-  "cd .. && npm ci && npm run build",
+  "cd .. && npm install && npm run build",
   "npm ci",
   "npx prisma generate"
 ]
