Simplify npm commands to avoid tracker conflicts
- Use npm install for both frontend and backend (more reliable)
- Remove cache clean (may be causing issues)
- Use (rm || true) to handle missing directories gracefully
- This should avoid the npm tracker conflicts

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -6,8 +6,8 @@ cmds = []
 
 [phases.build]
 cmds = [
-  "cd .. && npm cache clean --force && rm -rf node_modules .npm && npm install && npm run build",
-  "npm cache clean --force && rm -rf node_modules .npm && npm ci",
+  "cd .. && (rm -rf node_modules .npm || true) && npm install && npm run build",
+  "(rm -rf node_modules .npm || true) && npm install",
   "npx prisma generate"
 ]
 
