--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs_18", "npm-9_x"]
 
 [phases.install]
-cmds = []
+cmds = ["npm ci"]
 
 [phases.build]
-cmds = ["./build.sh"]
+cmds = ["npx prisma generate"]
 
 [start]
 cmd = "npm start"
